Closes #135